raw/sandbox/virginia/alb/alb-sandbox/09-security-groups-alb.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-095a9a67eb6adc206",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "internal-alb-sandbox-sg"
                }
            ],
            "VpcId": "vpc-06869a7b9aaeae0e8",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:807262913923:security-group/sg-095a9a67eb6adc206",
            "OwnerId": "807262913923",
            "GroupName": "internal-alb-sandbox-sg",
            "Description": "internal-alb-sandbox-sg",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 80,
                    "ToPort": 80,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 8443,
                    "ToPort": 8443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "For mtls",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
